--- a/presentation/index.html
+++ b/presentation/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Getting Started with Angular</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -47,12 +47,13 @@
 <div class="slides">
     <section>
         <h1>getting started with angularjs</h1>
-        <p>James Morrin</p>
-        <p>
+        <a href="https://plus.google.com/106674157563775429543/posts">+James Morrin</a>
         <br>
     </p>
     <p>
     <img src="imgs/angular.png" style="border:none;box-shadow:none;">
+    <br>
+    <a href="http://bit.ly/angularScope">bit.ly/angularScope</a>
     <br>
 </p>
 <p>
@@ -60,14 +61,9 @@
 </p>
 </section>
 <section>
-    <h2>What is angular?</h2>
+    <h2>Where do I begin?</h2>
     <div>
-        <ul>
-            <li>Is it MVC?</li>
-            <li>How does it compare to XYZ framework?</li>
-            <li>What is the best way to get started?</li>
-            <li>Is it hard?</li>
-        </ul>
+      <img src="imgs/whatImDoing.jpeg">
     </div>
 </section>
 <section>
@@ -83,6 +79,9 @@
 </section>
 <section>
     <h2>Use the Scope!</h2>
+    <div>
+      <img src="imgs/yoda.gif">
+    </div>
 </section>
 <section>
     <h2>Simple Scope Demo</h2>
@@ -127,9 +126,6 @@
     </div>
 </section>
 <section>
-    <h2>Expressions</h2>
-</section>
-<section>
     <h2>Tips</h2>
     <div>
         <ul>
@@ -150,19 +146,15 @@
 </section>
 <section>
     <h2>The Official Docs</h2>
+    <img src="imgs/angularHome.png" width="500">
     <div>
-        <a href="http://docs.angularjs.org/api/">API Docs</a>
+      <a href="http://docs.angularjs.org/api/">API Docs</a><br>
+      <a href="http://docs.angularjs.org/guide/">Developer Guide</a>
     </div>
     <div>
-        <br>
-    </div>
-    <div>
-        <a href="http://docs.angularjs.org/guide/">Developer Guide</a>
-    </div>
-    <div>
-        <br>
-    </div>
+      <br>
     <h3>But.....</h3>
+    </div>
 </section>
 <section>
     <h2>They kinda suck!</h2>
@@ -171,10 +163,12 @@
 </blockquote>
 </section>
 <section>
+  <h2>WAT?</h2>
   <img src="imgs/omgsnacks.gif">
 </section>
     <section>
         <h2>Video Resources</h2>
+        <img src="imgs/youtube.png" width="500">
         <div>
             <a href="http://egghead.io">egghead.io</a>
         </div>
