--- a/presentation/index.html
+++ b/presentation/index.html
@@ -220,6 +220,14 @@
         </div>
     </section>
     <section>
+      <h2>Bombermine</h2>
+      <img src="imgs/bombermine.png" width="500">
+      <div>
+        <a href="http://bombermine.com/">bombermine.com</a>
+      </div>
+
+    </section>
+    <section>
         <h2>Coming in future episodes...</h2>
         <div>
             <br>
