--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a href="presentation/index.html">Start</a>
+<!doctype html>
+<html>
+  <head>
+    <title>Scope</title>
+    <meta http-equiv="refresh" content="0;url=presentation/index.html" />
+  </head>
+  <body>
+    <a href="presentation/index.html">Start</a>
+  </body>
+</html>
