--- a/presentation/index.html
+++ b/presentation/index.html
@@ -53,7 +53,7 @@
     <p>
     <img src="imgs/angular.png" style="border:none;box-shadow:none;">
     <br>
-    <a href="http://bit.ly/angularScope">bit.ly/angularScope</a>
+    <a href="http://bit.ly/introToAngular">bit.ly/introToAngular</a>
     <br>
 </p>
 <p>
