--- a/presentation/index.html
+++ b/presentation/index.html
@@ -93,7 +93,7 @@
     <h2>What is the scope?</h2>
     <div>
         <ul>
-            <li>The "backbone" if your application</li>
+            <li>The "backbone" of your application</li>
             <li>provides data to the views</li>
             <li>acts as a pubsub</li>
             <li>observes changes and notifies views</li>
