--- a/presentation/index.html
+++ b/presentation/index.html
@@ -53,8 +53,6 @@
     <p>
     <img src="imgs/angular.png" style="border:none;box-shadow:none;">
     <br>
-    <a href="http://bit.ly/introToAngular">bit.ly/introToAngular</a>
-    <br>
 </p>
 <p>
 <br>
@@ -243,6 +241,13 @@
                 <li>Angular with other Libraries</li>
             </ul>
         </div>
+    </section>
+    <section>
+
+      <h1>THANKS!</h1>
+      <a href="http://bit.ly/introToAngular">bit.ly/introToAngular</a>
+      <br>
+      <a href="http://www.github.com/treasonx">github.com/treasonx</a>
     </section>
 </div>
       
