changed for html5 demo

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -53,7 +53,6 @@
     <p>
     <img src="imgs/angular.png" style="border:none;box-shadow:none;">
     <br>
-    <a href="http://bit.ly/angularScope">bit.ly/angularScope</a>
     <br>
 </p>
 <p>
@@ -86,7 +85,7 @@
 <section>
     <h2>Simple Scope Demo</h2>
     <div>
-        <a href="../code/simple.html">See the demo!</a>
+        <a href="../code/simple.html" target="_blank">See the demo!</a>
     </div>
 </section>
 <section>
@@ -103,26 +102,34 @@
 <section>
     <h2>Controllers</h2>
     <div>
-        <a href="../code/controller.html">Controller Demo</a>
+        <a href="../code/controller.html" target="_blank">Controller Demo</a>
     </div>
 </section>
 <section>
     <h2>Scope Life cycle</h2>
     <div>Scope Life Cycle Demo</div>
+    <br>
+    <br>
     <div>
-        <a href="../code/clock.html">Life Cycle  Demo</a>
+        <div>Not part of lifecycle</div>
+        <a href="../code/clock.html" target="_blank">Broken Demo</a>
+    </div>
+    <br>
+    <div>
+        <div>Part of lifecycle</div>
+        <a href="../code/clock_fixed.html" target="_blank">Working Demo</a>
     </div>
 </section>
 <section>
     <h2>Scope Inheritance</h2>
     <div>
-        <a href="../code/mawmaw.html">Inheritance Demo</a>
+        <a href="../code/mawmaw.html" target="_blank">Inheritance Demo</a>
     </div>
 </section>
 <section>
     <h2>Pubsub on the Scope!</h2>
     <div>
-        <a href="../code/pubsub.html">PubSub Demo</a>
+        <a href="../code/pubsub.html" target="_blank">PubSub Demo</a>
     </div>
 </section>
 <section>
@@ -134,9 +141,13 @@
             <li>TDD</li>
             <li>Baby Steps</li>
             <li>Embrace the scope</li>
-            <li>Directives are not the answer</li>
         </ul>
     </div>
+</section>
+<section>
+  <h1>Thanks!</h1>
+  <br>
+  <h3>@treasonx</h3>
 </section>
 <section>
     <h1>Resources!</h1>
