lightning talk prep

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<a href="presentation/index.html">Start</a>
+<a href="presentation/index.html">Long</a>
+<a href="presentation/lightning.html">Short</a>
+
